--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <title>Bea Donor | Portfolio</title>
   <link href="bootstrap-5.0.2-dist\css\bootstrap.min.css" rel="stylesheet">
   <script src = "bootstrap-5.0.2-dist\js\bootstrap.min.js"></script>
+  <script src = "observe.js"></script>
   <link rel = "stylesheet" href="style.css">
   <link rel = "stylesheet" href="icons-1.5.0\font\bootstrap-icons.css">
 </head>
 <body>
 <!--Navbar-->
-<nav class="navbar navbar-expand-lg">
+<header class = "nav-scrolled">
+<nav class="navbar navbar-expand-lg sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Bea Donor</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,14 +35,23 @@
       </div>
     </div>
   </nav>
+</header>
 
-<div class = "container">
-    <div class = "row align-items-center">
-        <div class = "col-md-6">
-            <h1>Hi! I'm Bea Biangca Donor</h1>
+        <div class = "intro">
+           
+                <h1>Hi! <br>I'm Bea Biangca Donor</h1>
+                <hr>
+            <p>I am a student of Bachelor of Science in Information and Technology</p>
+            <p>"Treat People With Kindness" <br><cite>-Harry Styles</cite></p>
+            
         </div>
-    </div>
-</div>
+<div class = "container">
+    <h2>Education</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet perspiciatis quos dolorem esse porro delectus saepe repudiandae iusto. Possimus rem maxime fugit magni suscipit assumenda necessitatibus debitis consequuntur, sequi perspiciatis repudiandae doloremque exercitationem laboriosam earum porro, ducimus laborum veritatis eaque dolor ea minus neque nam. A quaerat vitae rem dolorum dignissimos natus deleniti unde, mollitia sit iste expedita nihil! Quasi distinctio aut numquam qui vero itaque illum facere repudiandae soluta eaque eum deleniti consequuntur, nemo sed impedit et neque a repellendus harum? Delectus magnam, totam quibusdam voluptatem officiis laborum molestiae quo. Cupiditate officia distinctio veniam adipisci facilis, dolorum laboriosam facere!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis veniam, minima, quibusdam recusandae porro fuga ducimus ipsam error perferendis illo ullam. Ipsam alias commodi maiores tempora! Iure accusantium iusto fuga nemo commodi, illum veniam aliquam expedita laudantium quod dicta, earum, rem eum! Illum dicta temporibus ipsa consequuntur tenetur debitis non provident repudiandae quaerat. Illo accusamus deleniti sequi nobis, nam laboriosam esse culpa vitae et, cupiditate modi? Quos quidem iusto iste quod minima magnam asperiores eveniet tempora, adipisci neque blanditiis tempore beatae id molestiae, placeat laboriosam quae debitis ut quibusdam fugit consectetur et minus quaerat? Illo eaque tenetur amet neque ad?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum labore dignissimos sit obcaecati eius? Id nulla quibusdam, perferendis sunt rerum, reiciendis facilis nesciunt, error blanditiis impedit voluptate corporis voluptatum vero eaque velit cupiditate dolorum animi unde! Quo impedit, sit eligendi veniam fuga error sed maiores possimus? Voluptate architecto, aperiam rem inventore deleniti repudiandae id magnam non autem modi impedit explicabo, laboriosam aliquam unde? Dolor voluptatibus, placeat odit voluptates quaerat velit nihil aspernatur praesentium eveniet sequi inventore dicta fugiat, rem provident aliquid, tenetur minus alias vel dolore dignissimos earum! Tempore dolor culpa reprehenderit eligendi error sint nobis hic quas ex ad.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam beatae eaque ducimus odit libero quos ab, harum eius similique, iusto ipsa quibusdam ad, maiores inventore nostrum placeat repellendus a modi ex? Veritatis quia doloribus amet commodi, dolore cupiditate perferendis harum molestias consequatur pariatur natus, ea culpa. Velit eum, eos ipsam vel ullam distinctio saepe odio? Animi quisquam delectus dolore minima! Consectetur eos voluptates quas facere, laboriosam tempore, doloremque aperiam illum eius dignissimos reiciendis velit obcaecati cupiditate cum maxime ducimus dolor, tenetur adipisci nobis ratione eligendi. Tempora, rerum? Nobis consequatur similique inventore iste maiores cupiditate? Itaque eos libero inventore magnam? Odit.</p>
+  </div>
 
 
 </body>
